# alltheskills

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
crates/allskills/: Cargo.toml
crates/allskills-cli/: Cargo.toml
crates/allskills-cli/src/: config.rs  main.rs  skill_exporter.rs
crates/allskills-cli/src/commands/: export_skill.rs  info.rs  install.rs  list.rs  mod.rs  search.rs
crates/allskills-cli/tests/: cli_test.rs
crates/allskills/src/: error.rs  lib.rs
crates/allskills/src/providers/: claude.rs  detect.rs  github.rs  local.rs  mod.rs  openclaw.rs  trait_.rs
crates/allskills/src/types/: config.rs  mod.rs  source.rs
crates/allskills/tests/: providers_test.rs  types_test.rs
crates/alltheskills/: Cargo.toml
crates/alltheskills-cli/: Cargo.toml
crates/alltheskills-cli/src/: config.rs  main.rs  skill_exporter.rs
crates/alltheskills-cli/src/commands/: export_skill.rs  info.rs  init.rs  install.rs  list.rs  mod.rs  remove.rs  search.rs  show.rs  update.rs  validate.rs
crates/alltheskills-cli/tests/: cli_test.rs  cli_tests.rs
crates/alltheskills/src/: dependencies.rs  error.rs  lib.rs  utils.rs
crates/alltheskills/src/providers/: claude.rs  cline.rs  cloudflare.rs  codex.rs  cursor.rs  detect.rs  github.rs  kilo.rs  local.rs  mod.rs  moltbot.rs  openclaw.rs  roo.rs  trait_.rs  vercel.rs
crates/alltheskills/src/types/: config.rs  mod.rs  skill.rs  source.rs
crates/alltheskills/tests/: provider_tests.rs  providers_test.rs  types_test.rs
docs/: STATUS.md
docs/plans/: 2026-02-03-ai-skills-consolidator.md
examples/: basic_usage.rs  dependency_example.rs  init_skill.rs  search_example.rs
