[workspace]
members = [
    "crates/alltheskills",
    "crates/alltheskills-cli",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["AllTheSkills Contributors"]
description = "A Rust library and CLI for reading and installing AI skills from various sources"
repository = "https://github.com/alltheskills/alltheskills"
homepage = "https://github.com/alltheskills/alltheskills"
documentation = "https://docs.rs/alltheskills"
license = "MIT"
keywords = ["ai", "skills", "claude", "cline", "agent"]
categories = ["command-line-utilities", "development-tools", "asynchronous"]
readme = "README.md"
