[workspace]
members = [
    "crates/alltheskills",
    "crates/alltheskills-cli",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["AllTheSkills Contributors <contributors@alltheskills.dev>"]
description = "A Rust library and CLI for reading and installing AI skills from Claude, Cline, Cursor, Codex, and more"
repository = "https://github.com/alltheskills/alltheskills"
homepage = "https://github.com/alltheskills/alltheskills"
documentation = "https://docs.rs/alltheskills"
license = "MIT"
keywords = [
    "ai",
    "skills",
    "claude",
    "cline",
    "cursor",
    "codex",
    "kilo",
    "roo",
    "mcp",
    "agents",
    "llm",
    "prompts",
]
categories = [
    "command-line-utilities",
    "development-tools",
    "asynchronous",
    "config",
]
readme = "README.md"
rust-version = "1.85"

# Workspace dependencies that can be used by all crates
[workspace.dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Workspace metadata for cargo-release and publishing
[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
pre-release-commit-message = "chore: release {{version}}"
tag-message = "chore: release {{version}}"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
