[package]
name = "allskills"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
url = "2.5"
git2 = { version = "0.18", optional = true }
async-trait = "0.1"
chrono = { version = "0.4", features = ["std", "serde"] }

[features]
git = ["dep:git2"]
default = ["git"]
