[package]
name = "alltheskills-cli"
version.workspace = true
edition.workspace = true

[dependencies]
alltheskills = { path = "../alltheskills" }
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
