[package]
name = "alltheskills-cli"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
alltheskills = { path = "../alltheskills" }
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
toml = "0.8"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "alltheskills"
path = "src/main.rs"
