[package]
name = "alltheskills-cli"
version.workspace = true
edition.workspace = true
description = "CLI for managing AI skills from Claude, Cline, Cursor, Codex, and more"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
keywords = [
    "cli",
    "ai",
    "skills",
    "claude",
    "cline",
    "cursor",
    "codex",
    "kilo",
    "roo",
    "mcp",
    "agents",
    "llm",
    "prompts",
]
categories = [
    "command-line-utilities",
    "development-tools",
]
readme.workspace = true
authors.workspace = true

# Package metadata
exclude = ["/tests", ".github", ".gitignore"]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

# Binary configuration
[[bin]]
name = "alltheskills"
path = "src/main.rs"
doc = false  # Don't document the binary, only library APIs

[package.metadata.docs.rs]
# CLI is primarily a binary, but we document the internal APIs
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Core library
alltheskills = { path = "../alltheskills" }

# CLI framework
clap = { version = "4.4", features = ["derive", "help", "std", "usage"], default-features = false }

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Configuration and serialization
toml = "0.8"
serde_json = { workspace = true }

# Git operations for updates
git2 = "0.18"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[features]
default = []

# Include all providers from the library
full = ["alltheskills/full"]
