[package]
name = "alltheskills"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
rust-version.workspace = true

authors.workspace = true
exclude = ["/tests", "/examples", ".github"]

[package.metadata]
supports = [
    "claude",
    "cline", 
    "cursor",
    "openclaw",
    "roo",
    "codex",
    "kilo",
    "moltbot",
    "vercel",
    "cloudflare",
]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
url = "2.5"
git2 = { version = "0.18", optional = true }
async-trait = "0.1"
chrono = { version = "0.4", features = ["std", "serde"] }
toml = "0.8"
dirs = "5.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
chrono = { version = "0.4", features = ["std"] }

[features]
git = ["dep:git2"]
default = ["git"]

# Exclude examples and tests from crates.io package
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
