[package]
name = "alltheskills"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
rust-version.workspace = true
authors.workspace = true

# Package metadata for documentation and discovery
exclude = ["/tests", "/examples", ".github", ".gitignore"]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[package.metadata]
# Supported AI assistant platforms
supports = [
    "claude",
    "cline",
    "cursor",
    "openclaw",
    "roo",
    "codex",
    "kilo",
    "moltbot",
    "vercel",
    "cloudflare",
]

# Documentation metadata for docs.rs
[package.metadata.docs.rs]
# Document all features
all-features = true
# Enable doc_cfg feature for showing feature gates in docs
rustdoc-args = ["--cfg", "docsrs"]
# Define features to document
deprecated = "warn"
broken_intra_doc_links = "warn"
missing_crate_level_docs = "warn"
private_intra_doc_links = "warn"

[dependencies]
# Async runtime
tokio = { workspace = true }
futures = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = "0.8"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async trait support
async-trait = "0.1"

# Utilities
url = "2.5"
chrono = { version = "0.4", features = ["std", "serde"] }
dirs = "5.0"

# Optional Git support
git2 = { version = "0.18", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
chrono = { version = "0.4", features = ["std"] }

[features]
default = ["git"]

# Git provider support - enables cloning from GitHub repositories
git = ["dep:git2"]

# Full provider support - enables all providers (all are enabled by default)
full = ["git"]
